--- a/core/src/components/toggle/toggle.scss
+++ b/core/src/components/toggle/toggle.scss
@@ -259,6 +259,12 @@ input {
    * when the label sits on top.
    */
   @include margin(null, 0, $form-control-label-margin, 0);
+
+  /**
+   * Label text should not extend
+   * beyond the bounds of the toggle.
+   */
+  max-width: calc(100% / #{$form-control-label-stacked-scale});
 }
 
 :host(.toggle-label-placement-stacked.toggle-alignment-start) .label-text-wrapper {
